_sass/_pages.scss
/*  
    pages - style tweaks related to individual CB pages
    although most presentation is controlled by Bootstrap classes, these styles are necessary for default visualization pages to function correctly
*/

/* set up base variable to override from cb.scss */
$toc-a-color: #191919 !default;

/* index */
.carousel-item-title{
    background-color: rgba(37, 36, 36, 0.72);
}

/* item page */
.gallery-img {
    cursor: pointer;
}
#item-nav {
    a { 
        position: absolute;
        top:500px;
    }
    .previous { left:10px; }
    .next{ right:10px; }
}
.breadcrumb {
    padding: 0.75rem 1rem;
    background-color: rgb(248, 249, 250);
    border-radius: 0.25rem;
}
.compound-thumb {
    max-height: 110px;
    max-width: 90%;
}
// compound object big modal class
@media (min-width:576px){
    .modal-xxl{ max-width:90%; } 
}
@media (min-width:992px){
    .modal-xxl{ max-width:90%; } 
}
@media (min-width:1200px){ 
    .modal-xxl{ max-width: 90%;  }
}


/* browse */

/* map */
#mapContainer { height: 750px; z-index: 98; }
.map-thumb {
    height: 100px;
    max-width: 100%;
}
.leaflet-fusesearch-panel .header {
    padding-bottom: 1.5em;
}

/* timeline */
.timeline-thumb {
    max-height: 250px;
    max-width: 100%;
}
/* subjects */
.tagcloud0{font-size:0.4em;}
.tagcloud1{font-size:0.5em;}
.tagcloud2{font-size:0.8em;}
.tagcloud3{font-size:1.1em;}
.tagcloud4{font-size:1.4em;}
.tagcloud5{font-size:1.6em;}
.tagcloud6{font-size:1.9em;}
.tagcloud7{font-size:2.2em;}
.tagcloud8{font-size:2.5em;}
.tagcloud9{font-size:2.8em;}
.tagcloud10{font-size:3.0em;}

/* About */
/* side nav toc */ 
// mobile style
#about-toc-wrapper {
    position: fixed;
    left: 0;
    bottom: 0;
    z-index: 99;
    width: 100%;
    background-color: var(--bs-body-bg);
}
#about-toc-title {
    button { 
        width: 100%;
        background-color: #dedede;
    }
}
#about-toc-list {
    padding: 1rem 3rem;
}
.jekyll-toc-list { 
    list-style: none;
    padding-left: 0;
    font-style: italic;

    ul, ol {
        padding-left: 0;
        margin-left: 0;
    }

    > li {
        font-size: 15px;
        line-height: 1.2;
        padding: 5px 0;
    }

    li li {
        font-size: 13px;
        line-height: 1.2;
        padding-top: 7px;
        margin-left: 15px;
        list-style: none;
    }

    a {
        color: $toc-a-color !important;
    }
}
#about-contents-wrapper { 
    padding: 1rem;
}
// desktop style
@media (min-width: 992px) {
    #about-wrapper {
        display: grid;
        grid-column-gap: 1.2rem;
        grid-row-gap: 0;
        grid-template-areas: 
        "sidebar main"
        "sidebar credits";
        grid-template-columns: 1fr 6fr;
    }
    #about-toc-wrapper {
        grid-area: sidebar;
        position: initial;
    }
    #about-contents-wrapper {
        grid-area: main;
        order: 1;
        min-width:0;
        padding: 2rem 5rem 0 3rem;
        overflow-x: hidden;
    }
    /* creating a narrow text column */
    #about-contents-wrapper > {
        h2 {
            font-weight: bold;
        }

        h1, h2, h3, h4, h5, h6 {
            margin: 1.5rem 0 1rem;
        }

        p, .about-narrowed-content, .narrow-content, hr, .footnotes, ol, ul, blockquote {
            max-width: 750px;
        }

        a {
            text-decoration: underline;
        }
                
        a.btn {
            text-decoration: none;
        }
    }
    #credits-contents-wrapper {
        grid-area: credits;
        order: 2;
        min-width:0;
    }
    #about-toc { 
        position: -webkit-sticky;
        position: sticky;
        top: 0;
    }
    #about-toc-title { display: none; }
    #about-toc-list { 
        display: block; 
        padding: 2rem 0 2rem 1rem;
    }
    .jekyll-toc-list { 
        padding: 1rem;
        //border: 1px solid #dee2e6;
        //border-radius: 0.25rem;
        max-height: 90vh;
        overflow-y: auto;
        font-style: italic;

        ul, ol {
            padding-left: 0;
            margin-left: 0;
        }

        > li {
            font-size: 15px;
            line-height: 1.2;
            padding: 7px 0;
        }

        li li {
            font-size: 13px;
            line-height: 1.2;
            padding-top: 7px;
            margin-left: 15px;
            list-style: none;
        }

        a {
            color: $toc-a-color !important;
        }
    }
}

/* narrow text block for page-narrow layout */
.page-narrow {
    max-width: 750px;
    margin-left: auto;
    margin-right: auto;
}

/* about-narrow layout styles */ 
.about-narrow-contents > {
    h2 {
        font-weight: bold;
        padding-top: 100px;
        border-top: 1px dotted black;
    }
    h1, h2, h3, h4, h5, h6 {
        max-width: 650px;
        margin: 1.5rem auto 1rem;
    }
    p, .narrow-content, hr, .footnotes, ol, ul, blockquote {
        margin-left: auto;
        margin-right: auto;
        max-width: 650px;
    }
    .feature-include {
        text-align: center !important;
    }
}

